# aiddl-ros2-bridge

./: LICENSE  README.md  package.xml  requirements.txt  setup.cfg  setup.py
aiddl_ros2_bridge/: actor.py  receiver.py  sender.py  service.py
